Bug:  PRD Reviewer:  Self Comments:  Changes for Neutron integration.  {167th} 1. Fixed several alignment issues with displaying information about    multiple shares on an item in the 'Shared By/With Me' views.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/datatable/ShareStringValueCell.java
M    gwt/src/org/kablink/teaming/gwt/client/datatable/AssignmentCell.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -778,10 +778,10 @@
 	margin-left: 40px;
 }
 
-.verticalAlignTop
-{
-	vertical-align: top;
-}
+.verticalAlignTop     {vertical-align: top;}
+.verticalAlignTop2    {vertical-align: top !important;}
+.verticalAlignMiddle  {vertical-align: middle;}
+.verticalAlignMiddle2 {vertical-align: middle !important;}
 
 /* The following two styles are used to prevent an entry's description from starting */
 /* on a new line in the activity stream control. */
